# VOIDSUB

./: .gitignore  ARCHITECTURE_DECISIONS.md  DEPENDENCY_LICENSES.md  MASTER_AUDIT_REPORT_v2.0.0_CURRENT.md  RELEASE_KILAVUZU.md  SECURITY.md  Virel.V2_2.4.0_x64-setup.exe.sha256  Virel.V2_2.4.2_x64-setup.exe.sha256  Virel.V2_2.5.0_x64-setup.exe.sha256  fix_indent.py  main.py  pyrightconfig.json  requirements.txt  set-version.ps1  setup-cert.ps1  setup.ps1  start-dev.cmd  start-dev.ps1  virel-core.spec
.github/workflows/: release.yml
config/: defaults.py
core/: bridge.py  capture.py  cuda_manager.py  errors.py  event_router.py  hardware.py  hardware_advisor.py  modern_overlay.py  native_region_selector.py  performance_monitor.py  resource_manager.py  runtime_cleanup.py  updater.py
core/ocr/: base.py  (+3 more)
debug/: session_recorder.py  session_recorder_preview.py  test_junk_filter.py
installer/: setup.iss
scripts/: build-easyocr-plugin.ps1  build-python.ps1  build_embedded.py  publish-update.ps1  validate_embedded.js
tests/: test_e2e_pipeline.py  test_easy_ocr.py  test_easyocr_installer.py  test_junk_filter.py  test_ocr_text_cleaner.py  test_offline_model.py  test_region_validation.py  test_translation_cache.py  test_translation_pipeline.py
tools/: ocr_benchmark.py
ui-tauri/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
ui-tauri/src-tauri/: 2  Cargo.toml  tauri.conf.json
ui-tauri/src-tauri/capabilities/: default.json
ui-tauri/src-tauri/icons/: icon.icns
ui-tauri/src-tauri/nsis/: hooks.nsh
ui-tauri/src-tauri/src/: lib.rs  main.rs
(+80 files in other folders)
