[package]
name = "virel"
version = "2.5.0"
description = "Virel V2 desktop shell"
authors = ["Nokrima"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
window-vibrancy = "0.5"
windows-sys = { version = "0.59", features = [
  "Win32_Graphics_Dwm",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-shell = "2"
